HTML has been added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="navbar">
+            <h1>TO DO LIST</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <section id="section1">
+                <img src="img/image.webp" alt="">
+                <h2>Simple Todo</h2>
+                <input type="text" placeholder="What's on ypur mind!">
+                <button></button>
+            </section>
+            <section id="section2"></section>
+
+        </div>
+    </main>
+    <footer>
+        <p>Crafted with love by : Deepak Bhatt</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
