First phase modification has been done

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <section id="section1">
                 <img src="img/image.webp" alt="">
                 <h2>Simple Todo</h2>
-                <input type="text" placeholder="What's on ypur mind!">
-                <button></button>
+                <input id="text" type="text" placeholder="What's on your mind!">
+                <button id="btn">Submit</button>
             </section>
             <section id="section2"></section>
 
