HTML and CSS has been completed

--- a/index.html
+++ b/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do list</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="navbar">
-            <h1>TO DO LIST</h1>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
+      <div class="navbar">
+        <h1>TO DO LIST</h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <img src="img/menu.png" alt="">
+        </ul>
+      </div>
     </header>
     <main>
-        <div class="container">
-            <section id="section1">
-                <img src="img/image.webp" alt="">
-                <h2>Simple Todo</h2>
-                <input id="text" type="text" placeholder="What's on your mind!">
-                <button id="btn">Submit</button>
-            </section>
-            <section id="section2"></section>
-
-        </div>
+      <div class="container">
+        <section id="section1">
+          <img src="img/Todo.png" alt="" />
+          <h2>Simple Todo</h2>
+          <input id="text" type="text" placeholder="What's on your mind!" />
+          <button id="btn">Submit</button>
+        </section>
+        <section id="section2">
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+        </section>
+      </div>
     </main>
     <footer>
-        <p>Crafted with love by : Deepak Bhatt</p>
+      <p>Crafted with love by : Deepak Bhatt</p>
     </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
