1st phase of scripting has been completed

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
     </header>
     <main>
       <div class="container">
-        <section id="section1">
+        <div id="card1">
           <img src="img/Todo.png" alt="" />
           <h2>Simple Todo</h2>
           <input id="text" type="text" placeholder="What's on your mind!" />
           <button id="btn">Submit</button>
-        </section>
-        <section id="section2">
+        </div>
+        <div id="card2">
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button> 
           <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
           <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
           <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
           <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
           <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
-          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
-          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
-          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
-          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
-          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button>
-        </section>
+          <input class="txt"  type="text"><button class="btn2"><img src="img/cross.png" alt=""></button> 
+          </div> 
       </div>
     </main>
     <footer>
